--- a/style.css
+++ b/style.css
@@ -1,1 +1,92 @@
+/* stil for alle elementer */
+* {		
+  margin:0;
+  padding:0;
+}
 
+body{
+
+  width:960px;
+  font-family:Arial, Helvetica, sans-serif;
+  background:url("bg_body.jpg") top left no-repeat;
+}
+   
+a {color:#000000; text-shadow:1px 1px 1px #cccccc;}
+p {text-align:justify;}
+
+header, footer, nav, aside, section {display:block;}
+   
+h1 {
+  font-size:26px;
+  line-height:40px;
+  padding:18px 0;
+}
+nav {
+   width:100%;
+   height:40px;
+   background:#f3f3f3;
+   border:1px solid #cccccc;
+}
+
+
+nav ul {
+	margin: 0 auto;  
+	list-style-type:none;
+	width:940px;
+}
+
+nav ul li {
+	display: inline-block;
+}
+
+nav ul li a{
+	margin-left:20px;
+	display:block;
+	line-height:40px; 
+	text-align: center;
+	text-decoration: none;
+}
+
+nav ul li ul{
+	display:none;
+}
+	
+
+
+#content {
+	clear:both;
+	margin-top:10px;
+}
+#mcontent {
+	float:left;
+	width:620px;
+	padding: 0 5px 0 0 
+}
+aside {
+	float:left;
+	width:300px;
+	height: 600px;
+	background:#f3f3f3;
+}
+.bpage div {
+
+}
+aside section {
+	background:#e0e0e0;
+	margin:22px 0 0 22px;
+	padding:11px 22px;
+	width:50%;
+}
+.image {margin:6px auto;
+	background:url(test.jpg);
+	height:250px;
+	width:600px;
+}
+footer{
+	clear:both;
+	background:#666666;
+	border-top:1px solid #cccccc;
+	padding:10px;
+	text-align:center;
+	color:#ffffff;
+}
